# pythonic-fp-fptools

./: CHANGELOG.rst  README.md  README.rst  pyproject.toml
.github/workflows/: static.yml
docs/: Makefile  conf_custom.py  conf_devel.py  conf_release.py  index_custom.rst  index_devel.rst  index_release.rst
docs/source/: changelog.rst  conf.py  description.rst  index.rst  releases.rst  usage.rst
docs/source/api/: function.rst  index.rst  lazy.rst
docs/source/api/monads/: either.rst  index.rst  maybe.rst  state.rst
docs/source/docs/: either.rst  function.rst  index.rst  lazy.rst  maybe.rst  state.rst
src/pythonic_fp/fptools/: __init__.py  bool.py  either.py  either.pyi  function.py  function.pyi  lazy.py  lazy.pyi  maybe.py  maybe.pyi  singletons.py  state.py  state.pyi
tests/bool/: test_bool.py
tests/either/: test_sequence_either.py  test_str_repr_either.py
tests/function/: test_function.py
tests/lazy/: test_lazy.py
tests/maybe/: test_sequence_maybe.py  test_str_repr_maybe.py
tests/singletons/: test_nada.py  test_nada_usecases.py  test_no_value.py
tests/state/: test_state.py
