[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pythonic-fp.fptools"
version = "3.0.0"
authors = [{ name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dynamic = ["description"]
keywords = [
    "functional",
    "functional programming",
    "fp",
    "monad",
    "maybe",
    "either",
    "lazy",
    "non-strict",
]
dependencies = [
    "pythonic-fp.circulararray>=5.1.0, <5.2",
    "pythonic-fp.containers >=2.0.0, <2.1",
]

[project.optional-dependencies]
test = [
    "pytest >=8.3.5",
    "pythonic-fp.iterables >=3.0.0, <3.1",
    "pythonic-fp.queues >=3.0.0, <3.1",
]

[project.urls]
Homepage = "https://github.com/grscheller/pythonic-fp/blob/main/README.md"
Source = "https://github.com/grscheller/pythonic-fp-fptools"
Changelog = "https://github.com/grscheller/pythonic-fp-fptools/blob/main/CHANGELOG.md"
Documentation = "https://grscheller.github.io/pythonic-fp/maintained/fptools"

[tool.flit.sdist]
exclude = ["dist", "tests", ".gitignore", ".mypy_cache", ".pytest_cache"]

[tool.pytest.ini_options]
consider_namespace_packages = true

[tool.pylsp-mypy]
enabled = true
live-mode = true
strict = true
report_progress = true

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]
implicit_reexport = false
local_partial_types = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "single"
docstring-code-line-length = 72
