[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pythonic-fp-fptools"
version = "5.2.1"
readme = "README.rst"
requires-python = ">=3.13"
authors = [
  { name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" },
]
keywords = [
  "either",
  "fp",
  "functional",
  "functional programming",
  "lazy",
  "maybe",
  "monad",
  "non-strict",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "pythonic-fp-booleans>=3.0.2",
  "pythonic-fp-circulararray>=6.0.4",
  "pythonic-fp-gadgets>=4.0.2",
]
dynamic = ["description"]

[project.urls]
Changelog = "https://github.com/grscheller/pythonic-fp-fptools/blob/main/CHANGELOG.rst"
Documentation = "https://grscheller.github.io/pythonic-fp/projects/fptools.html"
Homepage = "https://grscheller.github.io/pythonic-fp/"
Source = "https://github.com/grscheller/pythonic-fp-fptools"

[project.optional-dependencies]
test = [
  "pytest>=8.4.1",
  "pythonic-fp-containers>=4.0.1",
  "pythonic-fp-iterables>=5.1.3",
  "pythonic-fp-queues>=5.1.1",
]

[tool.flit.module]
name = "pythonic_fp.fptools"

[tool.mypy]
explicit_package_bases = true
local_partial_types = true
namespace_packages = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.pylsp-mypy]
enabled = true
live-mode = true
dmypy = false
strict = true
report_progress = true

[tool.pytest]
addopts = [
  "-ra",
]
consider_namespace_packages = true
testpaths = ["tests/"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "E731",
  "C901",
]
"**/*.py" = ["E741"]

[tool.ruff.format]
quote-style = "single"
docstring-code-line-length = 72
